# freeticks-cpp

./: .gitignore  CMakeLists.txt  README.md  ftrun.sh
apps/: CMakeLists.txt  MdServApp.cpp
cmake/: FindClickhouseCpp.cmake
conf/: SPB_MDBIN.json  SPB_MDBIN.xml  clickhouse.sql  mdclnt.json  mdserv.json
docs/: ARCH.md  README.md
freeticks/: CMakeLists.txt
freeticks/matching/: OrderBook.cpp  OrderBook.hpp  OrderBook.ut.cpp
ft/: CMakeLists.txt  Main.ut.cpp
ft/capi/: ft-types.h
ft/core/: BestPrice.hpp  BestPriceCache.hpp  Client.hpp  Component.cpp  Component.hpp  CoreFields.hpp  CsvSink.hpp  EndpointStats.hpp  Executor.cpp  Executor.hpp  Fields.hpp  Identifiable.hpp  Instrument.hpp  InstrumentsCache.hpp  MdClient.hpp  MdGateway.hpp  MdServer.hpp  MdSub.hpp  Mixin.hpp  Object.hpp  Parameterized.hpp  Parameters.hpp  Ref.hpp  Request.hpp  Requests.hpp  SequenceMultiplexer.hpp  SequenceMultiplexor.hpp  SequencedChannel.hpp  Serializer.hpp  Server.hpp  Service.hpp  State.hpp  Stream.hpp  StreamStats.hpp  Subscriber.hpp  Subscription.hpp  Tick.hpp  TickMessage.hpp
ft/gw/spb/: Headers.hpp  MDParser.cpp  MDParser.hpp  MDParser.ut.cpp  MarketData.hpp
ft/gw/spb/dto/: Frame.hpp  MarketData.hpp
ft/io/: ClickHouse.hpp  Client.hpp  Conn.hpp  Connection.hpp  Connections.hpp  Csv.hpp  DgramConn.hpp  Heartbeats.hpp  MapView.hpp  MdClient.hpp  MdServer.hpp  PcapMdClient.hpp  PeerConn.hpp  Protocol.hpp  Reactor.cpp  Reactor.hpp  Router.hpp  Routing.hpp  Server.hpp  Service.cpp  Service.hpp  Sink.hpp
ft/matching/: OrderBook.cpp  OrderBook.hpp  OrderBook.ut.cpp
ft/mcast/: McastMdClient.hpp  McastMdGateway.hpp
ft/pcap/: PcapMdClient.hpp  PcapMdGateway.hpp
ft/qsh/: QshDecoder.cpp  QshDecoder.hpp  QshMdClient.hpp  QshMdGateway.cpp  QshMdGateway.hpp
ft/sbe/: SbeTypes.hpp
ft/spb/: SpbBestPriceStream.hpp  SpbDecoder.hpp  SpbDecoder.ut.cpp  SpbFrame.hpp  SpbInstrumentStream.hpp  SpbProtocol.hpp  SpbReplacingUpdates.hpp  SpbSchema.hpp
ft/tbricks/: TbricksProtocol.hpp  TbricksSchemaV1.hpp
ft/udp/: UdpMdServer.hpp
ft/utils/: Common.hpp  Compat.hpp  Defs.hpp  Factory.hpp  Fnv1a.hpp  Mixin.hpp  Numeric.hpp  Pool.hpp  Pool.ut.cpp  Signal.hpp  Sink.hpp  StringUtils.cpp  StringUtils.hpp  Throttled.hpp  Ticks.hpp  TimeUtils.hpp  Trace.hpp  UnitTest.hpp
mdconv/: CMakeLists.txt  MdConv.cpp  MdReader.hpp  QScalp.cpp  QScalp.hpp  Task.hpp  TickMessage.hpp
mdserv/: CMakeLists.txt  MdServ.cpp  MdServApp.cpp  MdServer.hpp
scripts/: build.sh  mdsync.sh  qsh_read.py  qsh_sync.sh  run_spb_mdserv.sh  run_spb_mdserv_24.sh
util/: Pool.hpp  Ticks.hpp  Trace.hpp
